--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 canvas{ display:block; width:100%; height:100%; }
 
 .hint{ position:absolute; bottom:10px; left:50%; transform:translateX(-50%); font-size:12px; opacity:.75;}
-.perm{ position:absolute; bottom:46px; left:50%; transform:translateX(-50%); padding:.6em 1em; border-radius:12px; background:#1a1a1a; color:#fff; border:1px solid #2a2a2a; font-weight:600; cursor:pointer; display:none; }
+/* .perm removido — giroscópio desativado no mobile */
 .msg{ position:absolute; top:10px; left:50%; transform:translateX(-50%); font-size:12px; background:#141414; border:1px solid #2a2a2a; padding:.5em .8em; border-radius:10px; opacity:.9; max-width:92%; text-align:center }
 @media (max-width:640px){ .logo3d-wrap{ height:56vh; min-height:300px } }
 
@@ -22,9 +22,7 @@ canvas{ display:block; width:100%; height:100%; }
   </script></head>
 <body>
   <div class="logo3d-wrap" id="logo3d">
-    <div class="msg" id="msg" style="display:none"></div>
-    <button class="perm" id="permBtn">ativar movimento por inclinação</button>
-    <div class="hint">arraste para girar • incline no celular (se permitido)</div>
+    <div class="msg" id="msg" style="display:none"></div><div class="hint">arraste com o mouse ou com o dedo para girar</div>
   </div>  <script type="module">
     /* ===================== CONFIG (.GLTF) =====================
        Use um .gltf com arquivos externos (.bin, /textures, etc.).
@@ -144,20 +142,6 @@ canvas{ display:block; width:100%; height:100%; }
     renderer.domElement.addEventListener('touchmove',  e=>{ const t=e.touches[0]; if(t) onMove(t.clientX, t.clientY); }, {passive:true});
     renderer.domElement.addEventListener('touchend', onUp);
 
-    // ==== Giroscópio (mobile) ====
-    const isTouch = matchMedia('(pointer:coarse)').matches;
-    const permBtn = document.getElementById('permBtn');
-    function enableGyro(){
-      function clamp(n,min,max){ return Math.max(min, Math.min(n,max)); }
-      const handler = (evt)=>{ const g = clamp((evt.gamma||0)/30, -1, 1); const b = clamp((evt.beta||0)/30, -1, 1); group.rotation.y = g * 0.8; group.rotation.x = -b * 0.6; };
-      if(typeof DeviceOrientationEvent!=='undefined'){
-        if(typeof DeviceOrientationEvent.requestPermission==='function'){
-          DeviceOrientationEvent.requestPermission().then(state=>{ if(state==='granted'){ addEventListener('deviceorientation', handler); permBtn.style.display='none'; } }).catch(()=>{});
-        } else { addEventListener('deviceorientation', handler); permBtn.style.display='none'; }
-      }
-    }
-    if(isTouch){ permBtn.style.display='inline-flex'; permBtn.addEventListener('click', enableGyro); }
-
     // ==== Animação (idle + inércia) ====
     const clock = new THREE.Clock();
     function tick(){
@@ -167,4 +151,4 @@ canvas{ display:block; width:100%; height:100%; }
     }
     tick();
   </script></body>
-</html> 
+</html>
